--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: go
 
 before_script:
- - go get -v github.com/prometheus/munin_exporter
+ - go get -v github.com/pvdh/munin_exporter
 
 script:
- - go build -a -v github.com/prometheus/munin_exporter/...
- - go test -v github.com/prometheus/munin_exporter/...
+ - go build -a -v github.com/pvdh/munin_exporter/...
+ - go test -v github.com/pvdh/munin_exporter/...
